docker-kubernetes/mastering-kubernetes/ch05-resources/restricted-namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: restricted
  labels:
    name: restricted
