docker-kubernetes/mastering-kubernetes/ch05-resources/hue-fitness-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: hue-fitness
spec:
  containers:
    - name: hue-fitness
      image: busybox
