docker-kubernetes/mastering-kubernetes/ch05-resources/hue-learn-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hue-learn
  labels:
    app: hue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hue
  template:
    metadata:
      labels:
        app: hue
    spec:
      containers:
        - name: hue-learner
          image: g1g1/hue-learn:0.3
          resources:
            requests:
              cpu: 200m
              # (0.2 core)
              memory: 256Mi
