docker-kubernetes/mastering-kubernetes/ch05-resources/trouble-deployment-us-central1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trouble-us-central1
  labels:
    app: trouble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trouble
  template:
    metadata:
      labels:
        app: trouble
        region: us-central1
    spec:
      containers:
        - name: trouble
          image: nginx
